--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -3,18 +3,28 @@
 {% block title %}Hello ProfileController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-    <a href="{{ path('app_logout') }}">Deconnexion</a>
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/ghon/Desktop/Dyma/SYMFONY/symfony_blog/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/ghon/Desktop/Dyma/SYMFONY/symfony_blog/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="wrapper">
+        <div class="profile">
+            <div class="presentation">
+                <div class="presentation--container">
+                    <img class="avatar" src="{{ app.user.avatar }}" alt="">
+                    <p class="presentation--container_nickname">{{ app.user.nickname }}</p>
+                </div>
+                <div class="presentation--control">
+                    <a class="btn btn-primary" href="{{ path('app_profile') }}">Mes informations</a>
+                    <a class="btn btn-primary" href="{{ path('app_editProfilePicture') }}">Modfier l'avatar</a>
+                    <a class="btn btn-primary" href="#">Modifier le mot passe</a>
+                </div>
+            </div>
+            <div class="utility">
+                {% block profile_utility %}
+                    <p>Info</p>
+                    <p>Info</p>
+                    <p>Info</p>
+                    <p>Info</p>
+                    <p>Info</p>
+                {% endblock %}    
+            </div>
+        </div>
+    </div>
 {% endblock %}
