--- a/templates/security/signin.html.twig
+++ b/templates/security/signin.html.twig
@@ -3,25 +3,27 @@
 {% block title %}Hello SecurityController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
     <h1>Connexion</h1>
     <form action="{{ path('app_signin') }}" method="post">
-        <label for="username">Email</label>
-        <input type="email" name="_username" id="username" value="{{ last_username }}">
-        <label for="password">Mot de passe</label>
-        <input type="password" name="_password" id="password" >
+        <div class="mb-3">
+            <label class="form-label required" for="username">Email</label>
+            <input class="form-control" type="email" name="_username" id="username" value="{{ last_username }}">
+        </div>
+        <div class="mb-3">
+            <label class="form-label required" for="password">Mot de passe</label>
+            <input class="form-control" type="password" name="_password" id="password" >
+        </div>
         <label>
             <input type="checkbox" name="_remember_me" checked>
             Rester connecté
         </label>
         <input type="hidden" name='_target_path' value='/profile'>
         <input type="hidden" name='_csrf_token' value='{{ csrf_token('authenticate') }}'>
-        <button type="submit">Envoyer</button>
+        <div class="mb-3">
+            <button class="btn-primary btn" type="submit">Envoyer</button>
+        </div>
     </form>
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
