--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -13,7 +13,7 @@
                 <div class="presentation--control">
                     <a class="btn btn-primary" href="{{ path('app_profile') }}">Mes informations</a>
                     <a class="btn btn-primary" href="{{ path('app_editProfilePicture') }}">Modfier l'avatar</a>
-                    <a class="btn btn-primary" href="#">Modifier le mot passe</a>
+                    <a class="btn btn-primary" href="{{ path('app_updatePassword') }}">Modifier le mot passe</a>
                 </div>
             </div>
             <div class="utility">
