--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,4 +5,5 @@
 @import "./components/buttons";
 @import "./layouts/header";
 @import "./pages/profile";
+@import "./pages/blog";
 @import "./layouts/footer";
