--- a/assets/sass/pages/_profile.scss
+++ b/assets/sass/pages/_profile.scss
@@ -1,17 +1,21 @@
 .profile {
     width: 100%;
     @include flex-between;
+    flex: 1;
     .presentation {
-        @include flex-center;
+        padding: 20px;
+        display: flex;
         align-items: flex-start;
         flex-direction: column;
-        width: 50%;
+        width: 300px;
         border-right: 1px solid #444;
+        height: 100%;
         &--container {
             @include flex-center;
-            margin: 40px 0;
-            img {
-                margin-right: 15px;
+            margin-bottom: 40px;
+            p {
+                margin: 0 0 0 15px;
+                font-weight: bold;
             }
         }
         &--control {
@@ -22,7 +26,8 @@
         }
     }  
     .utility {
-        width: 50%;
-        padding: 0 20px;
+        flex: 1;
+        height: 100%;
+        padding: 20px;
     }  
 }
