--- a/assets/sass/utils/_reusable.scss
+++ b/assets/sass/utils/_reusable.scss
@@ -1,5 +1,12 @@
-.avatar {
-    width: 40px;
+.avatarContainer {
     height: 40px;
+    width: 40px;
+    @include flex-center;
     border-radius: 50%;
+    overflow: hidden;
+    &--avatar {
+        min-height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
 }
