add user article with pagination in profile

--- a/templates/blog/articles/article_form.html.twig
+++ b/templates/blog/articles/article_form.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="content">
-        <div class="blog">
+        <div class="form-container">
             <h1>Création d'un article</h1>
             {{ form_start(form) }}
             {{ form_end(form) }}
