--- a/assets/sass/pages/_blog.scss
+++ b/assets/sass/pages/_blog.scss
@@ -1,4 +1,4 @@
-.blog {
+.form-container {
     width: 100%;
     @include flex-center;
     justify-content: flex-start;
@@ -10,5 +10,70 @@
     }
     form {
         width: 80%;
+    }
+}
+
+.article-container {
+    width: 100%;
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    grid-gap: 20px;
+    flex-wrap: wrap;
+    .article {
+        height: 400px;
+        width: 30%;
+        min-width: 200px;
+        border: 1px solid #000;
+        border-radius: 3px;
+        padding: 10px;
+        word-break: break-all;
+        margin-bottom: 40px;
+        display: flex;
+        flex-direction: column;
+        &--imageContainer {
+            width: 100%;
+            height: 180px;
+            overflow: hidden;
+            &__image {
+                width: 100%;
+                min-height: 100%;
+                object-fit: cover;
+                transition: transform 0.9s;
+                &:hover {
+                    transform: scale(1.2);         
+                }
+            }
+        }
+        &--title {
+            font-weight: bold;
+            margin: 25px 0;
+        }
+        &--author{
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin-bottom: 10px;
+            margin-top: auto;
+            p {
+                margin: 0 0 0 15px;
+            }
+        }
+        &--likes {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            button {
+                border: none;
+                background: none;
+                margin-right: 10px;
+            }
+            p {
+                margin: 0;
+            }
+        }
     }
 }
