--- a/assets/sass/pages/_profile.scss
+++ b/assets/sass/pages/_profile.scss
@@ -29,5 +29,28 @@
         flex: 1;
         height: 100%;
         padding: 20px;
+        // profile user article display
+        .profileArticle {
+            &--article{
+                padding:  3px 10px;
+                margin-bottom: 10px;
+                p {
+                    margin: 0;
+                    font-weight: bold;
+                }
+                @include flex-between;
+            }
+        }
+        .paginationContainer {
+            width: 100%;
+            margin: 35px 0 20px;
+            @include flex-center;
+            a {
+                padding: 5px;
+                margin: 0 5px;
+                color: white;
+                font-weight: bold;
+            }
+        }
     }  
 }
