--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -20,11 +20,21 @@
             </div>
             <div class="utility">
                 {% block profile_utility %}
-                    <p>Info</p>
-                    <p>Info</p>
-                    <p>Info</p>
-                    <p>Info</p>
-                    <p>Info</p>
+                    <div class="profileArticle">
+                        {% for article in articles %}
+                            <div class="profileArticle--article box">
+                                <p>{{ article.title }}</p>
+                                <button class='btn btn-primary'>Voir l'article</button>
+                                <button class='btn btn-secondary'>Modifer l'article</button>
+                                <button class='btn btn-danger'>Supprimer l'article</button>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="paginationContainer">
+                        {% for i in range(1, numberOfPages ) %}
+                            <a class='btn btn-info' href="{{ path('app_profile', { index: i }) }}">{{ i }}</a>
+                        {% endfor %}
+                    </div>
                 {% endblock %}    
             </div>
         </div>
