--- a/templates/blog/articles/article_form.html.twig
+++ b/templates/blog/articles/article_form.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Création d'un article{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
     <div class="content">
         <div class="form-container">
-            <h1>Création d'un article</h1>
+            <h1>{{ title }}</h1>
             {{ form_start(form) }}
             {{ form_end(form) }}
         </div>    
