add show article route

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -17,9 +17,12 @@
                         </div>
                         <p>{{ article.author.nickname }}</p>
                     </div>
-                    <div class="article--likes">
-                        <button class="article--likes__btn"><i class="fa-regular fa-thumbs-up"></i></button>
-                        <p class="article--likes__stat">{{ article.likes }}</p>
+                    <div class="d-flex justify-content-between mt-1">
+                        <a class='btn btn-success' href="{{ path('app_show_article', {id: article.id}) }}">Voir l'article</a>
+                        <div class="article--likes">
+                            <button class="article--likes__btn"><i class="fa-regular fa-thumbs-up"></i></button>
+                            <p class="article--likes__stat">{{ article.likes }}</p>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
