--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,5 +5,6 @@
 @import "./components/buttons";
 @import "./layouts/header";
 @import "./pages/profile";
+@import "./pages/show_article";
 @import "./pages/blog";
 @import "./layouts/footer";
