--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -24,9 +24,12 @@
                         {% for article in articles %}
                             <div class="profileArticle--article box">
                                 <p>{{ article.title }}</p>
-                                <button class='btn btn-primary'>Voir l'article</button>
-                                <button class='btn btn-secondary'>Modifer l'article</button>
-                                <button class='btn btn-danger'>Supprimer l'article</button>
+                                <a href='{{ path('app_show_article', { id: article.id }) }}' class='btn btn-primary'>Voir l'article</a>
+                                <a href='{{ path('app_modify_article', { id: article.id }) }}' class='btn btn-secondary'>Modifer l'article</a>
+                                <form method="POST" action="{{ path('app_delete_article', { id: article.id }) }}">
+                                    <input type="hidden" name="token" value="{{ csrf_token('delete-item') }}" >
+                                    <button class='btn btn-danger' type='submit'>Supprimer</button>
+                                </form>
                             </div>
                         {% endfor %}
                     </div>
