add pagination for homepage

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -30,4 +30,5 @@
             {% endfor %}
         </div>    
     </div>
+    {% include "layout/pagination.html.twig" with {'numberOfPages' : nbrOfPages, 'page_localisation' : 'app_blog' } %}
 {% endblock %}
