--- a/templates/blog/articles/show_article.html.twig
+++ b/templates/blog/articles/show_article.html.twig
@@ -10,7 +10,7 @@
                 <img src="{{article.image}}" alt="">
             </div>
             <div class="showArticle--content">
-                <p class="showArticle--content__text">{{ article.content }}</p>
+                <p class="showArticle--content__text my-5">{{ article.content }}</p>
             </div>
             <div class="showArticle--utility d-flex justify-content-between fill">
                 <div class="showArticle--utility__author d-flex justify-content-center align-items-center ">
@@ -20,10 +20,41 @@
                     <p class="m-2">{{ article.author.nickname }}</p>
                 </div>
                 <div class="showArticle--utility__likes d-flex align-items-center ">            
-                    <a href='{{ path('app_like_article', { id: article.id }) }}' class="btn btn-primary" style='color:#fff;'><i class="fa-regular fa-thumbs-up"></i></a>
+                    <a href='{{ path('app_like_article', { id: article.id }) }}' class="btn" style='color:#fff;'><i class="fa-regular fa-thumbs-up"></i></a>
                     <p class="">{{ article.likes }}</p>
                 </div>
             </div>
+            <div class="commentContainer mt-4">
+                <div class="commentContainer--comments">
+                    {% for comment in comments %}
+                    <div class="commentContainer--comments__box box mb-3 px-3 py-2">
+                        <div class="comment-header d-flex justify-content-between align-items-center mb-2">
+                            <div class="comment-header-info d-flex align-items-center">
+                                <div class="avatarContainer">
+                                    <img class="avatarContainer--avatar" src="{{ comment.author.avatar }}" alt="">
+                                </div>
+                                <p class="m-1">{{ comment.author.nickname }}</p>
+                            </div>
+                            <div class='comment-header-date'>
+                                <p>{{ comment.createdAt|date() }}</p>
+                            </div>
+                        </div>
+                        <div class="comment-content">
+                            <p class="m-1 p-2">{{ comment.content }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                {{ form_start(form) }}
+                {{ form_end(form) }}
+            </div> 
+            {% if nbrOfPages > 1 %}
+                <div class="paginationContainer">
+                    {% for i in range(1, nbrOfPages ) %}
+                        <a class='btn btn-info' href="{{ path('app_show_article', {page : i, id : articleId }) }}">{{ i }}</a>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
